# v2ray-rust

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  clippy.toml  test_config.toml
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  rust.yml
src/: config.rs  main.rs
src/api/: api.proto  mod.rs  v2ray_rust_api.rs
src/common/: aead_helper.rs  fnv1a.rs  macro_def.rs  mod.rs
src/common/net/: copy_with_capacity.rs  mod.rs
src/config/: api.rs  deserialize.rs  dns.rs  geoip.proto  geoip.rs  geosite.rs  inbound.rs  ip_trie.rs  log.rs  mod.rs  outbound.rs  policy.rs  protocol.rs  reverse.rs  route.rs  routing.rs  server_builder.rs  to_chainable_builder.rs  transport.rs  utils.rs
src/dev/: mod.rs
src/proxy/: address.rs  mod.rs  udp.rs
src/proxy/blackhole/: mod.rs
src/proxy/direct/: mod.rs
src/proxy/dokodemo_door/: mod.rs
src/proxy/grpc/: mod.rs
src/proxy/h2/: mod.rs
src/proxy/http/: connector.rs  mod.rs
src/proxy/shadowsocks/: aead.rs  aead_helper.rs  context.rs  crypto_io.rs  inbound.rs  mod.rs  udp_crypto_io.rs
src/proxy/simpleobfs/: http.rs  mod.rs
src/proxy/socks/: mod.rs  socks5.rs
src/proxy/socks5/: inbound.rs  mod.rs  server_client.rs
src/proxy/tls/: inbound.rs  macos.rs  mod.rs  tls.rs  tls_stream.rs  windows.rs
src/proxy/trojan/: mod.rs  trojan.rs  trojan_stream.rs
src/proxy/utils/: mod.rs
src/proxy/vmess/: aead.rs  aead_header.rs  kdf.rs  mod.rs  vmess.rs  vmess_option.rs  vmess_stream.rs
src/proxy/websocket/: mod.rs  ws_early_data.rs
