[package]
name = "v2ray-rust"
version = "0.1.0"
authors = ["darsvador"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
strict-vmess-udp = []

[dependencies]
tokio-util = {version="0.7.0",features=["codec","net"]}
async-trait = "0.1"
# actix = "0.10.0"
# snmalloc-rs = "0.2.28"
tokio-tungstenite = {version="*",features=["stream"],default-features = false}
# actix-http = { version = "3.0.0-beta.5", features = ["rustls"]}
actix-rt = "2.2.0"
env_logger = "0.9"
clap = "3.0.13"
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
actix-server = "2.0.0-rc.4"
log = "0.4"
lazy_static = "1.4.0"
# awc = "3.0.0-beta.4"
actix-service = "2.0"
# snmalloc-rs = "0.2.6"
anyhow = "1.0"
bytes = "1"
rand = { version = "0.7", features = ["small_rng"] }
hkdf = "0.12.0"
sha-1 = "0.10.0"
num_cpus = "1.13.0"
tokio = {version="1", features=["net","io-util","macros","sync"]}
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
bloomfilter = "1.0.2"
byte_string = "1.0"
spin = "0.7.0"
crc32fast = "1.3.0"
aes-gcm = "0.9.4"
chacha20poly1305 = "0.9.0"
aes = "0.7.5"
sha2 = "0.10.1"
md-5 = "0.10.0"
uuid = { version="0.8", features=["std"]}
aead = "0.4.3"
generic-array = "0.14.5"
hmac = "0.12.0"
tokio-boring = "2.1.4"
webpki = "0.22.0"
boring = "2.0.0"
regex = "1.5.4"
socket2 = { version="0.4.4",features=["all"]}
protobuf = { version = "2.26.1", features = ["with-bytes"] }
domain_matcher={git="https://github.com/Qv2ray/DomainMatcher/"}
cidr_matcher={git="https://github.com/Qv2ray/CIDRMatcher"}
gentian = "0.1.1"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[build-dependencies]
protoc-rust = "2.26.1"
