[package]
name = "v2ray-rust"
version = "0.1.0"
authors = ["darsvador"]
edition = "2021"
exclude = ["./test_config.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
strict-vmess-udp = []

[dependencies]
tokio-util = {version="0.7.0",features=["codec","net"]}
async-trait = "0.1"
bitvec = "1"
base64 = "0.13.0"
tokio-tungstenite = {version="0.16",features=["stream"],default-features = false}
actix-rt = "2.2.0"
env_logger = "0.9"
clap = "3"
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
actix-server = "2.0.0-rc.4"
log = "0.4"
actix-service = "2.0"
cidr-utils = "0.5.5"
anyhow = "1.0"
bytes = "1"
rand = { version = "0.7", features = ["small_rng"] }
hkdf = "0.12.0"
sha-1 = "0.10.0"
num_cpus = "1.13.0"
tokio = {version="1", features=["net","io-util","macros","sync"]}
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
bloomfilter = "1.0.2"
byte_string = "1.0"
spin = "0.7.0"
crc32fast = "1.3.0"
aes-gcm = "0.9.4"
chacha20poly1305 = "0.9.0"
aes = "0.7.5"
sha2 = "0.10.1"
md-5 = "0.10.0"
uuid = { version="0.8", features=["std"]}
aead = "0.4.3"
generic-array = "0.14.5"
hmac = "0.12.0"
tokio-boring = "2.1.4"
boring-sys = "2.0.0"
boring = "2.0.0"
regex = "1.5.4"
socket2 = { version="0.4.4",features=["all"]}
protobuf = { version = "2.26.1", features = ["with-bytes"] }
domain_matcher={git="https://github.com/Qv2ray/DomainMatcher/"}
#cidr_matcher={git="https://github.com/Qv2ray/CIDRMatcher"}
h2 = "0.3.11"
http = "0.2"
libc = "0.2"
brotli = "3.3.3"
gentian = "0.1.8"
hyper = {version="0.14.17",features=["http1","http2","client","server"]}
tower = "*"
once_cell = "1.9.0"

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1

[build-dependencies]
protobuf-codegen-pure = "2.27.1"
