[package]
authors = ["darsvador"]
edition = "2021"
exclude = ["./test_config.toml"]
name = "v2ray-rust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
strict-vmess-udp = []

[dependencies]
actix-rt = "2.7"
actix-server = "2.1.1"
actix-service = "2.0"
aead = "0.4.3"
aes = "0.8.1"
aes-gcm = "0.9.4"
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.13.0"
bitvec = "1"
bloomfilter = "1.0.9"
boring = "2.0.0"
boring-sys = "2.0.0"
byte_string = "1.0"
bytes = "1"
chacha20poly1305 = "0.9.0"
cidr-utils = "0.5.6"
clap = "3"
crc32fast = "1.3.2"
domain_matcher = {git = "https://github.com/darsvador/DomainMatcher", rev = "8df5a46746d90900d"}
env_logger = "0.9"
futures-util = {version = "0.3", default-features = false, features = ["sink", "std"]}
generic-array = "0.14.5"
hkdf = "0.12"
hmac = "0.12"
log = "0.4"
md-5 = "0.10.0"
prost = "0.10"
protobuf = {version = "3.0.1", features = ["with-bytes"]}
rand = {version = "0.8", features = ["small_rng"]}
regex = "1.5.5"
serde = {version = "1.0", features = ["derive"]}
sha-1 = "0.10.0"
sha2 = "0.10.1"
socket2 = {version = "0.4.5", features = ["all"]}
spin = "0.9.2"
tokio = {version = "1.18", features = ["net", "io-util", "macros", "sync"]}
tokio-boring = "2.1.4"
tokio-tungstenite = {version = "0.17", features = ["stream"], default-features = false}
tokio-util = {version = "0.7", features = ["codec", "net"]}
toml = "0.5"
tonic = "0.7"
uuid = {version = "1.0", features = ["std", "v4"]}
#cidr_matcher={git="https://github.com/Qv2ray/CIDRMatcher"}
brotli = "3.3.4"
gentian = "0.1.8"
h2 = "0.3.13"
http = "0.2"
hyper = {version = "0.14.18", features = ["http1", "http2", "client", "server"]}
libc = "0.2"
once_cell = "1"
tower = "0.4.12"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true

[build-dependencies]
protobuf-codegen = "3.0.1"
tonic-build = "0.7"

[target.'cfg(windows)'.dependencies]
schannel = "0.1.20"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
openssl-probe = "0.1.5"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.0.0"
